--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.548.0",
     "next": "15.5.6",
     "react": "19.1.0",
