Update dependencies and integrate Google Analytics from @next/third-parties
- Added @next/third-parties as a dependency in package.json and package-lock.json.
- Replaced Google Analytics script tags with the GoogleAnalytics component from @next/third-parties in layout.tsx for improved tracking integration.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "figma:fetch": "tsx scripts/fetch-figma.ts"
   },
   "dependencies": {
+    "@next/third-parties": "^16.0.1",
     "@radix-ui/react-popover": "^1.1.15",
     "@tailwindcss/typography": "^0.5.19",
     "clsx": "^2.1.1",
