--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "jspdf": "^3.0.3",
     "lucide-react": "^0.548.0",
     "mdast": "^2.3.2",
-    "next": "15.5.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "next": "^16.0.7",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-markdown": "^10.1.0",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.1",
