--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "html2canvas": "^1.4.1",
     "jspdf": "^4.1.0",
     "lucide-react": "^0.548.0",
-    "mdast": "^2.3.2",
     "next": "^16.0.7",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
@@ -28,6 +27,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/mdast": "^4.0.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
